[package]
name    = "ripcheck"
version = "0.0.7" # Includes arp, PortCheck features working, needs work but usuable
authors = ["HerbM <HerbMartin@GMail.com>"]
description = "Fast ARP & TCP Port Checker in Rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.93"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
cfile = "0.5.1"
# resolve = "0.2.0"
ipconfig = "0.2.2"
lazy_static = "1.4.0"
regex = "1.4.5"
dnsclient = { git = "https://github.com/jedisct1/rust-dnsclient" }
ipnet = "2.3.0"

# prettytable-rs = "^0.8"
# log = "0.4.*"
# domain-resolv = { git = "https://github.com/NLnetLabs/domain" }
# tokio = { version = "*", features = ["full", "tracing", "time"] }
# rand = "*"
# futures = { version = "0.3.*" }
# env_logger = "0.7.*"
