[package]
name    = "ripcheck"
version = "0.0.12" # Threaded DNS & Rev, Arp, MACVendors, better formatting
authors = ["HerbM <HerbMartin@GMail.com>"]
description = "Fast ARP & TCP Port Checker in Rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.93"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
cfile = "0.5.1"
ipconfig = "0.2.2"
lazy_static = "1.4.0"
regex = "1.4.5"
dnsclient = { git = "https://github.com/jedisct1/rust-dnsclient" }
dns-lookup = "1.0.6"
ipnet = "2.3.0"
systemstat = "0.1.7"
# resolve = "0.2.0"
# sys-info = "0.9"


# prettytable-rs = "^0.8"
# log = "0.4.*"
# domain-resolv = { git = "https://github.com/NLnetLabs/domain" }
# tokio = { version = "*", features = ["full", "tracing", "time"] }
# rand = "*"
# futures = { version = "0.3.*" }
# env_logger = "0.7.*"
