[package]
name    = "ripcheck"
version = "0.0.16"
# Simplified args, Threaded DNS/Rev/Arp/MACVendors/pfh/formatting/timings
authors = ["HerbM <HerbMartin@GMail.com>"]
description = "Fast ARP & TCP Port Checker in Rust"
edition = "2018"

# [profile.release]
# debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.94"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
cfile = "0.5.1"
ipconfig = "0.2.2"
lazy_static = "1.4.0"
regex = "1.4.6"
dnsclient = { git = "https://github.com/jedisct1/rust-dnsclient" }
dns-lookup = "1.0.6"
ipnet = "2.3.0"
systemstat = "0.1.7"
phf = { version = "0.8.0", features = ["macros"] }
thread-id = "4.0.0"
# fs = "0.0.5"
# resolve = "0.2.0"
# sys-info = "0.9"

# prettytable-rs = "^0.8"
# log = "0.4.*"
# domain-resolv = { git = "https://github.com/NLnetLabs/domain" }
# tokio = { version = "*", features = ["full", "tracing", "time"] }
# rand = "*"
# futures = { version = "0.3.*" }
# env_logger = "0.7.*"
